Fix - Compact class would cause header centered text to be slightly off center
https://datatables.net/forums/discussion/52288/datatables-compact-class-prevents-centering-of-elements#latest

--- a/css/jquery.dataTables.scss
+++ b/css/jquery.dataTables.scss
@@ -283,7 +283,7 @@ table.dataTable {
 	&.compact {
 		thead th,
 		thead td {
-			padding: 4px 17px 4px 4px;
+			padding: 4px 17px;
 		}
 
 		tfoot th,
